force-app/main/default/objects/KimbleOne__ActivityAssignment__c/fields/KimbleOne__LostReason__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__LostReason__c</fullName>
    <label>Cancellation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>Resourced elsewhere</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>