force-app/main/default/objects/KimbleOne__ActivityAssignment__c/fields/KimbleOne__LowRemainingUsage__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__LowRemainingUsage__c</fullName>
    <formula>IF ( KimbleOne__ForecastP1EndDate__c &gt;  TODAY() + BLANKVALUE($Setup.KimbleOne__KimbleOneConfigSetting__c.KimbleOne__LowUsageDaysTolerance__c,30)
&amp;&amp; KimbleOne__ForecastUsage__c &gt; 0
&amp;&amp; 100 * (KimbleOne__ForecastRemainingUsage__c / KimbleOne__ForecastUsage__c)
&lt; BLANKVALUE($Setup.KimbleOne__KimbleOneConfigSetting__c.KimbleOne__LowRemainingUsageTolerance__c,10), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last 10% usage</label>
    <type>Checkbox</type>
</CustomField>