force-app/main/default/objects/KimbleOne__ActivityAssignment__c/fields/KimbleOne__Margin__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Margin__c</fullName>
    <formula>IF ( NOT(ISBLANK(KimbleOne__ForecastRevenue__c) || KimbleOne__ForecastRevenue__c = 0 ), ( KimbleOne__ForecastRevenue__c - KimbleOne__ForecastCost__c ) / KimbleOne__ForecastRevenue__c, NULL )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin Pct</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>