force-app/main/default/objects/KimbleOne__ActivityAssignment__c/fields/KimbleOne__MarginAmount__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__MarginAmount__c</fullName>
    <formula>IF (NOT(ISBLANK(KimbleOne__ForecastRevenue__c)), KimbleOne__ForecastRevenue__c - KimbleOne__ForecastCost__c, NULL )</formula>
    <label>Margin Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>