force-app/main/default/objects/KimbleOne__ActivityAssignment__c/fields/KimbleOne__MaximumUsage__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__MaximumUsage__c</fullName>
    <label>Maximum Usage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>