force-app/main/default/objects/KimbleOne__ActivityAssignment__c/fields/KimbleOne__MaxToilAccrualThresholdExceeded__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__MaxToilAccrualThresholdExceeded__c</fullName>
    <formula>AND(KimbleOne__ResourcedActivity__r.KimbleOne__IsTOIL__c, !ISBLANK(KimbleOne__ResourcedActivity__r.KimbleOne__MaximumToilAccrual__c),KimbleOne__EntryRemainingUsage__c + KimbleOne__UnforecastUsage__c &gt; KimbleOne__ResourcedActivity__r.KimbleOne__MaximumToilAccrual__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Max Toil Accrual Threshold Exceeded</label>
    <type>Checkbox</type>
</CustomField>