force-app/main/default/objects/KimbleOne__ActivityAssignment__c/fields/KimbleOne__MinToilAccrualThresholdExceeded__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__MinToilAccrualThresholdExceeded__c</fullName>
    <formula>AND(KimbleOne__ResourcedActivity__r.KimbleOne__IsTOIL__c, !ISBLANK(KimbleOne__ResourcedActivity__r.KimbleOne__MinimumToilAccrual__c),KimbleOne__EntryRemainingUsage__c + KimbleOne__UnforecastUsage__c &lt; KimbleOne__ResourcedActivity__r.KimbleOne__MinimumToilAccrual__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Min Toil Accrual Threshold Exceeded</label>
    <type>Checkbox</type>
</CustomField>