force-app/main/default/objects/KimbleOne__ActivityAssignment__c/fields/KimbleOne__ModelActivityAssignment__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ModelActivityAssignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Model Activity Assignment</label>
    <referenceTo>KimbleOne__ActivityAssignment__c</referenceTo>
    <relationshipLabel>Activity Assignments (Model Activity Assignment)</relationshipLabel>
    <relationshipName>ModelActivityAssignments</relationshipName>
    <type>Lookup</type>
</CustomField>