force-app/main/default/objects/KimbleOne__ActivityAssignment__c/fields/KimbleOne__Notes__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Notes__c</fullName>
    <label>Z_Obsolete - Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>