force-app/main/default/objects/KimbleOne__ActivityAssignment__c/fields/KimbleOne__NumberOfActivityAssignments__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__NumberOfActivityAssignments__c</fullName>
    <label>Num Of Assignments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>