force-app/main/default/objects/KimbleOne__ActivityAssignment__c/fields/KimbleOne__NumberOfBusinessDays__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__NumberOfBusinessDays__c</fullName>
    <label>Z_Obsolete - NumberOfBusinessDays</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>