force-app/main/default/objects/KimbleOne__ActivityAssignment__c/fields/KimbleOne__OpenActualUsage__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__OpenActualUsage__c</fullName>
    <label>Open Actual Usage</label>
    <summarizedField>KimbleOne__ActivityPeriodAssignment__c.KimbleOne__ActualUsage__c</summarizedField>
    <summaryFilterItems>
        <field>KimbleOne__ActivityPeriodAssignment__c.KimbleOne__IsClosed__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>KimbleOne__ActivityPeriodAssignment__c.KimbleOne__IsTracking__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>KimbleOne__ActivityPeriodAssignment__c.KimbleOne__ActivityAssignment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>