force-app/main/default/objects/KimbleOne__ActivityAssignment__c/fields/KimbleOne__OverrideInternalRate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__OverrideInternalRate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Override Internal Rate</label>
    <type>Checkbox</type>
</CustomField>