force-app/main/default/objects/KimbleOne__ActivityAssignment__c/fields/KimbleOne__ResourceConsultantDemandPreference__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ResourceConsultantDemandPreference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resource Consultant Demand Preference</label>
    <referenceTo>KimbleOne__ResourceConsultantDemandPreference__c</referenceTo>
    <relationshipLabel>Activity Assignments</relationshipLabel>
    <relationshipName>ActivityAssignments</relationshipName>
    <type>Lookup</type>
</CustomField>