force-app/main/default/objects/KimbleOne__ActivityAssignment__c/fields/KimbleOne__ResourcedActivity__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ResourcedActivity__c</fullName>
    <label>Scoped With</label>
    <referenceTo>KimbleOne__ResourcedActivity__c</referenceTo>
    <relationshipLabel>Activity Assignments</relationshipLabel>
    <relationshipName>ActivityAssignments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>