force-app/main/default/objects/KimbleOne__ActivityAssignment__c/fields/KimbleOne__ResourcedActivityInvoicedWith__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ResourcedActivityInvoicedWith__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoiced With</label>
    <referenceTo>KimbleOne__ResourcedActivity__c</referenceTo>
    <relationshipLabel>Activity Assignments (Resourced Activity Invoiced With)</relationshipLabel>
    <relationshipName>ActivityAssignmentsInvoicedWith</relationshipName>
    <type>Lookup</type>
</CustomField>