force-app/main/default/objects/KimbleOne__ActivityAssignment__c/fields/KimbleOne__ResourcedActivityOperatedWith__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ResourcedActivityOperatedWith__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Operated With</label>
    <referenceTo>KimbleOne__ResourcedActivity__c</referenceTo>
    <relationshipLabel>Activity Assignments (Operated With)</relationshipLabel>
    <relationshipName>ActivityAssignmentsOperatedWith</relationshipName>
    <type>Lookup</type>
</CustomField>