force-app/main/default/objects/KimbleOne__ActivityAssignment__c/fields/KimbleOne__ResourceInitials__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ResourceInitials__c</fullName>
    <label>Resource Initials</label>
    <length>10</length>
    <type>Text</type>
</CustomField>