force-app/main/default/objects/KimbleOne__ActivityAssignment__c/fields/KimbleOne__ResourceUser__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ResourceUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resource User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ActivityAssignments</relationshipName>
    <type>Lookup</type>
</CustomField>