force-app/main/default/objects/KimbleOne__ActivityAssignment__c/fields/KimbleOne__RevenueRate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__RevenueRate__c</fullName>
    <description>The agreed standard revenue rate for this Assignment</description>
    <label>Revenue Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>