force-app/main/default/objects/KimbleOne__ActivityAssignment__c/fields/KimbleOne__SupplierInvoicingCurrencyCostRate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__SupplierInvoicingCurrencyCostRate__c</fullName>
    <label>Supplier Invoicing Currency Cost Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>