force-app/main/default/objects/KimbleOne__ActivityAssignment__c/fields/KimbleOne__SupplierInvoicingCurrencyISOCode__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__SupplierInvoicingCurrencyISOCode__c</fullName>
    <label>Supplier Invoicing Currency</label>
    <length>3</length>
    <type>Text</type>
</CustomField>