force-app/main/default/objects/KimbleOne__ActivityAssignment__c/fields/KimbleOne__SupplierPurchaseOrderRule__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__SupplierPurchaseOrderRule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier PO Rule</label>
    <referenceTo>KimbleOne__SupplierPurchaseOrderRule__c</referenceTo>
    <relationshipLabel>Activity Assignments</relationshipLabel>
    <relationshipName>ActivityAssignments</relationshipName>
    <type>Lookup</type>
</CustomField>