force-app/main/default/objects/KimbleOne__ActivityAssignment__c/fields/KimbleOne__TaskAssignmentCount__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TaskAssignmentCount__c</fullName>
    <label>Task Assignment Count</label>
    <summaryForeignKey>KimbleOne__TaskAssignment__c.KimbleOne__ActivityAssignment__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>