force-app/main/default/objects/KimbleOne__ActivityAssignment__c/fields/KimbleOne__TemporalCostRateBasis__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TemporalCostRateBasis__c</fullName>
    <label>Temporal Cost Rate Basis</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>