force-app/main/default/objects/KimbleOne__ActivityAssignment__c/fields/KimbleOne__TemporalForecastCostRate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TemporalForecastCostRate__c</fullName>
    <label>Cost Rate</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>