force-app/main/default/objects/KimbleOne__ActivityAssignment__c/fields/KimbleOne__TemporalForecastRevenueRate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TemporalForecastRevenueRate__c</fullName>
    <label>Revenue Rate</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>