force-app/main/default/objects/KimbleOne__ActivityAssignment__c/fields/KimbleOne__TimeEntryCount__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TimeEntryCount__c</fullName>
    <label>Time Entry Count</label>
    <summaryForeignKey>KimbleOne__TimeEntry__c.KimbleOne__ActivityAssignment__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>