force-app/main/default/objects/KimbleOne__ActivityAssignment__c/fields/KimbleOne__UnforecastUsage__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__UnforecastUsage__c</fullName>
    <label>Unforecast Usage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>