force-app/main/default/objects/KimbleOne__ActivityAssignment__c/fields/KimbleOne__UsagePattern__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__UsagePattern__c</fullName>
    <label>Usage Pattern</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>