force-app/main/default/objects/KimbleOne__ActivityAssignment__c/fields/KimbleOne__UtilisationPercentage__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__UtilisationPercentage__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Utilisation</label>
    <precision>12</precision>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>