force-app/main/default/objects/KimbleOne__ActivityAssignment__c/listViews/KimbleOne__All.listView-meta.xml
<ListView>
    <fullName>KimbleOne__All</fullName>
    <columns>NAME</columns>
    <columns>KimbleOne__Resource__c</columns>
    <columns>KimbleOne__ResourcedActivity__c</columns>
    <columns>KimbleOne__ActivityAssignmentDemand__c</columns>
    <columns>KimbleOne__ActivityAssignmentType__c</columns>
    <columns>KimbleOne__StartDate__c</columns>
    <columns>KimbleOne__ForecastP3EndDate__c</columns>
    <columns>KimbleOne__LatestTimeEntryDate__c</columns>
    <columns>KimbleOne__TemporalForecastCostRate__c</columns>
    <columns>KimbleOne__TemporalForecastRevenueRate__c</columns>
    <columns>KimbleOne__HasRevenueExchangeRateImpact__c</columns>
    <columns>KimbleOne__InvoicingCurrencyForecastRevenue__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>