force-app/main/default/objects/KimbleOne__ActivityAssignment__c/listViews/KimbleOne__CandidateResources.listView-meta.xml
<ListView>
    <fullName>KimbleOne__CandidateResources</fullName>
    <columns>NAME</columns>
    <columns>KimbleOne__ResourcedActivity__c</columns>
    <columns>KimbleOne__ActivityAssignment__c</columns>
    <columns>KimbleOne__Resource__c</columns>
    <columns>KimbleOne__StartDate__c</columns>
    <columns>KimbleOne__ForecastP3EndDate__c</columns>
    <columns>KimbleOne__CostRate__c</columns>
    <filterScope>Everything</filterScope>
    <label>Candidate Resources</label>
    <language>en_US</language>
</ListView>